--- a/AtividadeExtra/style.css
+++ b/AtividadeExtra/style.css
@@ -18,7 +18,8 @@ article {
     max-height: 25%;
     border-radius: 10px;
     max-width: 65%;
-    margin-bottom: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 .lista {
